@@ -1,3 +1,12 @@
+Mon May 19 14:42:23 2003  George Lebl <jirka@5z.com>
+
+	* gui/greeter/greeter_system.c, gui/greeter/greeter_session.c, 
+	  gui/greeter/greeter_action_language.c: make OK the default action
+	  to make pressing Enter work as expected
+
+	* gui/greeter/greeter_session.c: if there are too many sessions
+	  to fit on screen add a scrollbox to fix #104120
+
 Mon May 19 13:56:52 2003  George Lebl <jirka@5z.com>
 
 	* gui/gdmsetup.glade: Fix #104757 by adding a scrolled window to the
